--- a/index.html
+++ b/index.html
@@ -1,155 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Yudi Permana</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #f5f5f5;
-            color: #333;
-        }
-        .container {
-            display: flex;
-            max-width: 960px;
-            margin: 30px auto;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            background-color: #fff;
-        }
-        .left-column {
-            background: #2c2c2c;
-            color: #fff;
-            width: 35%;
-            padding: 30px 20px;
-            text-align: center;
-        }
-        .left-column img {
-            width: 120px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-        .left-column h2 {
-            font-size: 18px;
-            margin: 20px 0 10px;
-            border-bottom: 1px solid #555;
-            padding-bottom: 5px;
-            text-align: left;
-        }
-        .left-column p, .left-column li {
-            font-size: 14px;
-            line-height: 1.6;
-            text-align: left;
-        }
-        .left-column ul {
-            list-style: none;
-            padding-left: 0;
-        }
-        .right-column {
-            padding: 30px;
-            width: 65%;
-        }
-        .right-column h1 {
-            font-size: 32px;
-            margin: 0;
-        }
-        .right-column h3 {
-            margin-top: 5px;
-            font-weight: normal;
-            color: #444;
-        }
-        .section {
-            margin-top: 30px;
-        }
-        .section h2 {
-            font-size: 18px;
-            border-bottom: 2px solid #ddd;
-            padding-bottom: 5px;
-            margin-bottom: 15px;
-            text-transform: uppercase;
-        }
-        .section ul {
-            padding-left: 0;
-        }
-        .section ul li {
-            margin-bottom: 15px;
-        }
-        .section ul li strong {
-            display: block;
-            font-size: 15px;
-        }
-        .contact-info li {
-            display: flex;
-            align-items: center;
-            margin-bottom: 8px;
-        }
-        .contact-info img {
-            width: 16px;
-            margin-right: 8px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="left-column">
-            <img src="profile.png" alt="Foto Profil">
-            <h2>Informasi Pribadi</h2>
-            <ul class="contact-info">
-                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/email.png"> permanayudhi16@gmail.com</li>
-                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/phone.png"> +62 857-1049-6327</li>
-                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/instagram-new.png"> permanastudio_ps</li>
-                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/youtube-play.png"> Permana Studio Official</li>
-                <li><img src="https://img.icons8.com/material-outlined/24/ffffff/marker.png"> Bogor, Indonesia</li>
-            </ul>
-
-            <h2>Tentang Saya</h2>
-            <p>Saya seorang yang berpengalaman di bidang pengelolaan database dan pemeliharaan sistem berbasis web. Aktif juga sebagai content creator di YouTube, dengan fokus pada pembuatan lagu, penulisan musik, serta konten kreatif lainnya. Terampil dalam mengelola proyek, berpikir kreatif, dan menyelesaikan masalah dengan pendekatan yang terstruktur.</p>
-
-            <h2>Pendidikan</h2>
-            <p><strong>Graduated (2010)</strong><br>Sekolah Menengah Kejuruan<br>Akuntansi</p>
-
-            <h2>Keterampilan Kreatif</h2>
-            <ul>
-                <li>Pembuatan Konten (YouTube)</li>
-                <li>Produksi Musik</li>
-                <li>Penulisan Lagu</li>
-                <li>Manajemen Proyek</li>
-            </ul>
-        </div>
-
-        <div class="right-column">
-            <h1>Yudi Permana</h1>
-            <h3>Database Administrator (DBA)</h3>
-
-            <div class="section">
-                <h2>Pengalaman Kerja</h2>
-                <ul>
-                    <li><strong>Manager IT</strong><br>Lembaga Keuangan Syariah – KSPSS Baytul Ikhtiar, Bogor (2025)</li>
-                    <li><strong>Staff IT</strong><br>Lembaga Keuangan Syariah – KSPSS Baytul Ikhtiar, Bogor (2022 – 2024)<br>- Bertanggung jawab atas pemeliharaan perangkat lunak dan pengelolaan data.</li>
-                    <li><strong>Data Engineer</strong><br>Lembaga Keuangan Syariah – KSPSS Baytul Ikhtiar, Bogor (2019 – 2021)<br>- Mengelola dan mengoptimalkan sistem database untuk mendukung operasional.</li>
-                    <li><strong>Staff R&D</strong><br>Lembaga Keuangan Syariah – KSPSS Baytul Ikhtiar, Bogor (2016 – 2018)<br>- Melakukan riset dan pengembangan untuk meningkatkan efisiensi sistem.</li>
-                    <li><strong>Expert Staff</strong><br>Water.org – Universal Access 100-0-100, Bogor<br>- Menyusun strategi pemasaran keuangan untuk mendukung program akses air bersih.</li>
-                    <li><strong>Account Officer</strong><br>Kabupaten Bogor, Kota Bogor, Cicurug Sukabumi</li>
-                </ul>
-            </div>
-
-            <div class="section">
-                <h2>Keterampilan Teknis</h2>
-                <ul>
-                    <li>Pengelolaan Database</li>
-                    <li>Pemeliharaan Sistem Berbasis Web</li>
-                    <li>Query Writing (SQL)</li>
-                    <li>Google Spreadsheet</li>
-                    <li>Google Apps Script (automatisasi & integrasi)</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -157,263 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yudi Permana - Landing Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #f0f2f5;
-            color: #333;
-            line-height: 1.6;
-        }
-
-        header {
-            background: linear-gradient(90deg, #1f2937, #4b5563);
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            max-width: 1000px;
-            margin: auto;
-        }
-
-        .navbar h1 {
-            font-size: 28px;
-        }
-
-        .navbar ul {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-        }
-
-        .navbar ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.3s ease;
-        }
-
-        .navbar ul li a:hover {
-            color: #a5b4fc;
-        }
-
-        .hero {
-            padding: 60px 20px;
-            background: #1f2937;
-            color: #fff;
-            text-align: center;
-        }
-
-        .hero h2 {
-            font-size: 36px;
-            margin-bottom: 10px;
-        }
-
-        .hero p {
-            font-size: 18px;
-            color: #d1d5db;
-        }
-
-        .dashboard {
-            max-width: 1000px;
-            margin: 40px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-        }
-
-        .dashboard h2 {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        .dashboard .cards {
-            display: flex;
-            gap: 20px;
-            flex-wrap: wrap;
-        }
-
-        .card {
-            background: #f9fafb;
-            padding: 20px;
-            border-radius: 10px;
-            flex: 1 1 250px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-        }
-
-        .card h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .card p {
-            font-size: 14px;
-            color: #555;
-        }
-
-        .container {
-            max-width: 1000px;
-            margin: 40px auto;
-            background: #fff;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-            border-radius: 10px;
-            overflow: hidden;
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .left-column, .right-column {
-            padding: 30px;
-            flex: 1 1 300px;
-        }
-
-        .left-column {
-            background: #111827;
-            color: #fff;
-        }
-
-        .left-column img {
-            width: 120px;
-            border-radius: 12px;
-            display: block;
-            margin: 0 auto 20px;
-        }
-
-        .left-column h2 {
-            font-size: 16px;
-            border-bottom: 1px solid #444;
-            margin-top: 30px;
-            padding-bottom: 5px;
-        }
-
-        .left-column ul {
-            list-style: none;
-            margin-top: 10px;
-        }
-
-        .left-column ul li {
-            margin-bottom: 10px;
-            display: flex;
-            align-items: center;
-        }
-
-        .left-column ul li img {
-            width: 18px;
-            margin-right: 10px;
-        }
-
-        .right-column h2 {
-            font-size: 18px;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #eee;
-            padding-bottom: 5px;
-            text-transform: uppercase;
-        }
-
-        .right-column ul {
-            list-style: none;
-            margin-top: 10px;
-        }
-
-        .right-column ul li {
-            margin-bottom: 15px;
-        }
-
-        .right-column ul li strong {
-            font-size: 16px;
-            display: block;
-        }
-
-        .portfolio {
-            max-width: 1000px;
-            margin: 40px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-        }
-
-        .portfolio h2 {
-            font-size: 24px;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .slider {
-            display: flex;
-            overflow-x: auto;
-            scroll-snap-type: x mandatory;
-            gap: 20px;
-        }
-
-        .slide {
-            min-width: 300px;
-            background: #f3f4f6;
-            padding: 20px;
-            border-radius: 10px;
-            scroll-snap-align: start;
-            flex-shrink: 0;
-        }
-
-        .slide h3 {
-            margin-bottom: 10px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            font-size: 14px;
-            background: #e5e7eb;
-            color: #555;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="navbar">
             <h1>Yudi Permana</h1>
-            <ul>
+            <button class="hamburger" aria-label="Toggle Menu">☰</button>
+            <ul class="nav-menu">
                 <li><a href="#dashboard">Dashboard</a></li>
                 <li><a href="#cv">CV</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#kontak">Kontak</a></li>
             </ul>
+            <button class="dark-toggle" onclick="toggleDarkMode()">🌙</button>
         </div>
     </header>
 
-    <section id="dashboard" class="dashboard">
-        <h2>Dashboard</h2>
+    <section id="dashboard" class="dashboard reveal">
+        <div class="dashboard-container">
+            <div class="dashboard-text">
+                <h2>Selamat Datang di <span style="font-weight: bold;">Dashboard Saya</span></h2>
+                <p style="margin-top: 15px;">Kelola proyek Anda dengan mudah dan pantau progres secara real-time.</p>
+                <div style="margin-top: 30px;">
+                    <a href="#cv" class="btn-primary">Mulai Sekarang</a>
+                    <a href="#portfolio" class="btn-secondary">Lihat Video</a>
+                </div>
+            </div>
+            <div class="dashboard-image">
+                <img src="https://cdn-icons-png.flaticon.com/512/4140/4140037.png" alt="Illustration" />
+            </div>
+        </div>
+
         <div class="cards">
-            <div class="card">
+            <div class="card reveal">
                 <h3>Statistik Proyek</h3>
                 <p>10+ Proyek selesai dalam bidang IT dan produksi konten.</p>
             </div>
-            <div class="card">
+            <div class="card reveal">
                 <h3>Pengalaman</h3>
                 <p>7+ tahun pengalaman di dunia teknologi dan keuangan syariah.</p>
             </div>
-            <div class="card">
+            <div class="card reveal">
                 <h3>Jaringan Profesional</h3>
                 <p>Terhubung dengan lebih dari 1.000 profesional di industri terkait.</p>
             </div>
         </div>
     </section>
+    
+    <section id="tentang" style="padding: 60px 20px; background: #ffffff;" class="reveal">
+        <div style="max-width: 1200px; margin: auto; display: flex; flex-wrap: wrap; gap: 40px; align-items: flex-start;">
+            <div style="flex: 1 1 500px;">
+                <p style="color: #6b7280; text-transform: uppercase; font-weight: 600;">Tentang Saya</p>
+                <h2 style="font-size: 28px; font-weight: 700; color: #1f2937; margin: 10px 0;">Mewujudkan Potensi Lewat Strategi Kreatif & Teknologi</h2>
+                <p style="margin-bottom: 20px; color: #4b5563;">
+                    Saya adalah Yudi Permana, praktisi IT dan konten digital yang berfokus pada efisiensi kerja dan edukasi berbasis teknologi. Dengan pengalaman lebih dari 7 tahun, saya membantu organisasi dan individu mengoptimalkan alur kerja dan membangun kehadiran digital yang efektif.
+                </p>
+                <ul style="list-style: none; padding: 0; color: #374151;">
+                    <li style="margin-bottom: 12px;">✅ Spesialisasi dalam pembuatan dashboard Excel & Google Sheets.</li>
+                    <li style="margin-bottom: 12px;">✅ Membangun sistem otomasi berbasis Google Apps Script & AI.</li>
+                    <li style="margin-bottom: 12px;">✅ Kreator konten edukasi teknologi tanpa memperlihatkan wajah.</li>
+                </ul>
+                <a href="#cv" style="display: inline-block; margin-top: 20px; background: #2563eb; color: #fff; padding: 10px 20px; border-radius: 8px; text-decoration: none; font-weight: 600;">Selengkapnya →</a>
+            </div>
+            <div style="flex: 1 1 500px; display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px;">
+                <img src="https://images.pexels.com/photos/3184292/pexels-photo-3184292.jpeg?auto=compress&cs=tinysrgb&w=600" style="width: 100%; border-radius: 12px;" alt="Foto Tim 1">
+                <img src="https://images.pexels.com/photos/3861969/pexels-photo-3861969.jpeg?auto=compress&cs=tinysrgb&w=600" style="width: 100%; border-radius: 12px;" alt="Foto Tim 2">
+                <img src="https://images.pexels.com/photos/7551448/pexels-photo-7551448.jpeg?auto=compress&cs=tinysrgb&w=600" style="width: 100%; border-radius: 12px;" alt="Foto Tim 3">
+                <img src="https://images.pexels.com/photos/3184643/pexels-photo-3184643.jpeg?auto=compress&cs=tinysrgb&w=600" style="width: 100%; border-radius: 12px;" alt="Foto Tim 4">
+            </div>
+        </div>
+    </section>
 
-    <section id="cv" class="container">
+    <section id="cv" class="container reveal">
         <div class="left-column">
             <img src="profile.png" alt="Foto Profil">
             <h2>Informasi Pribadi</h2>
@@ -462,7 +126,7 @@
         </div>
     </section>
 
-    <section id="portfolio" class="portfolio">
+    <section id="portfolio" class="portfolio reveal">
         <h2>Portfolio</h2>
         <div class="slider">
             <div class="slide">
@@ -480,9 +144,12 @@
         </div>
     </section>
 
+    <button id="scrollTopBtn" onclick="scrollToTop()">↑</button>
     <footer>
-        &copy; 2025 Yudi Permana. All rights reserved.
+        © 2025 Yudi Permana. All rights reserved.
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
 
